build/y.output
Nonterminals useless in grammar

    ArraySubscriptStmtList
    ScopeStmt
    $@9
    $@10
    ManualScopeStmt
    BodyStmt
    Assign3
    $@35


Terminals unused in grammar

    VAR_FLAG_DEFAULT
    LEQ
    VAL_ASSIGN
    CONTINUE
    CHAR_LIT
    THEN


Rules useless in grammar

  129 $@9: ε

  130 ScopeStmt: '{' $@9 StmtList '}'

  131 $@10: ε

  132 ScopeStmt: '{' $@10 '}'
  133          | BodyStmt

  134 ManualScopeStmt: '{' StmtList '}'
  135                | '{' '}'
  136                | BodyStmt

  137 BodyStmt: ';'

  138 $@35: ε

  139 Assign3: EQL_ASSIGN $@35 Expression


Rules useless in parser due to conflicts

    3 Program: ε


State 0 conflicts: 1 reduce/reduce
State 2 conflicts: 1 shift/reduce
State 4 conflicts: 1 shift/reduce
State 5 conflicts: 1 shift/reduce, 1 reduce/reduce
State 7 conflicts: 38 reduce/reduce
State 12 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 24 conflicts: 1 shift/reduce
State 27 conflicts: 1 shift/reduce
State 32 conflicts: 4 shift/reduce
State 33 conflicts: 4 shift/reduce
State 34 conflicts: 4 shift/reduce
State 38 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce, 2 reduce/reduce
State 76 conflicts: 1 shift/reduce
State 79 conflicts: 17 shift/reduce
State 80 conflicts: 17 shift/reduce
State 81 conflicts: 4 shift/reduce
State 82 conflicts: 17 shift/reduce
State 83 conflicts: 17 shift/reduce
State 84 conflicts: 4 shift/reduce
State 85 conflicts: 4 shift/reduce
State 86 conflicts: 4 shift/reduce
State 87 conflicts: 4 shift/reduce
State 88 conflicts: 4 shift/reduce
State 89 conflicts: 4 shift/reduce
State 90 conflicts: 4 shift/reduce
State 91 conflicts: 4 shift/reduce
State 92 conflicts: 4 shift/reduce
State 93 conflicts: 4 shift/reduce
State 94 conflicts: 4 shift/reduce
State 95 conflicts: 4 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 119 conflicts: 4 shift/reduce
State 139 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 151 conflicts: 8 shift/reduce
State 155 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 163 conflicts: 38 reduce/reduce
State 164 conflicts: 9 shift/reduce
State 169 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 191 conflicts: 1 shift/reduce
State 197 conflicts: 8 shift/reduce
State 202 conflicts: 8 shift/reduce
State 204 conflicts: 1 shift/reduce
State 207 conflicts: 9 shift/reduce
State 209 conflicts: 8 shift/reduce
State 210 conflicts: 1 shift/reduce
State 211 conflicts: 9 shift/reduce
State 217 conflicts: 9 shift/reduce
State 220 conflicts: 1 shift/reduce
State 222 conflicts: 8 shift/reduce
State 226 conflicts: 9 shift/reduce


Grammar

    0 $accept: Program $end

    1 $@1: ε

    2 Program: $@1 GlobalStmtList
    3        | ε

    4 GlobalStmtList: GlobalStmtList GlobalStmt
    5               | GlobalStmt

    6 GlobalStmt: DefineVariableStmt
    7           | FunctionDefStmt

    8 $@2: ε

    9 DefineVariableStmt: VARIABLE_T $@2 IDENTS ';'

   10 $@3: ε

   11 DefineVariableStmt: DefineVariableStmt $@3 Expression Assign ';'
   12                   | ε

   13 IDENTS: IDENTS ',' IDENT
   14       | IDENT
   15       | IDENTS ',' IDENT Assign2
   16       | IDENT Assign2

   17 $@4: ε

   18 IDENTS: IDENT '[' INT_LIT $@4 ']' InArr

   19 $@5: ε

   20 $@6: ε

   21 $@7: ε

   22 FunctionDefStmt: VARIABLE_T IDENT $@5 '(' FunctionParameterStmtListFirst ')' $@6 '{' $@7 StmtList '}'

   23 $@8: ε

   24 FunctionParameterStmtListFirst: $@8 FunctionParameterStmtList

   25 FunctionParameterStmtList: FunctionParameterStmtList ',' FunctionParameterStmt
   26                          | FunctionParameterStmt
   27                          | ε

   28 FunctionParameterStmt: VARIABLE_T IDENT '[' ']'
   29                      | VARIABLE_T IDENT

   30 StmtList: StmtList Stmt
   31         | Stmt

   32 Stmt: ';'
   33     | DefineVariableStmt
   34     | COUT CoutParmListStmt ';'
   35     | RETURN Expression ';'
   36     | IF IfStmt
   37     | WHILE WhileStmt
   38     | FOR ForStmt
   39     | BREAK ';'

   40 $@11: ε

   41 IfStmt: '(' Expression ')' $@11 '{' StmtList '}'

   42 $@12: ε

   43 IfStmt: IfStmt ELSE $@12 '{' StmtList '}'

   44 $@13: ε

   45 IfStmt: '(' Expression ')' $@13 RETURN Expression ';'

   46 $@14: ε

   47 $@15: ε

   48 WhileStmt: $@14 '(' Expression ')' $@15 '{' StmtList '}'

   49 $@16: ε

   50 ForStmt: $@16 ForThrid '{' StmtList '}'

   51 ForSecond: VARIABLE_T IDENTS

   52 $@17: ε

   53 ForSecond: Expression $@17 Assign
   54          | ε

   55 ForThrid: '(' ForSecond ';' Expression ';' ForSecond ')'
   56         | '(' ForSecond ':' IDENT ')'

   57 Func: Func ',' Expression
   58     | Expression

   59 Arr: Arr ',' Expression
   60    | Expression
   61    | ε

   62 $@18: ε

   63 InArr: InArr '[' INT_LIT $@18 ']'
   64      | Assign2

   65 $@19: ε

   66 CoutParmListStmt: CoutParmListStmt SHL $@19 Expression

   67 $@20: ε

   68 CoutParmListStmt: SHL $@20 Expression
   69                 | ε

   70 Expression: Expression ENDL Expression
   71           | Expression ADD Expression
   72           | Expression SUB Expression
   73           | Expression MUL Expression
   74           | Expression DIV Expression
   75           | Expression REM Expression
   76           | SUB Expression
   77           | Expression GTR Expression
   78           | Expression LES Expression
   79           | Expression GEQ Expression
   80           | Expression EQL Expression
   81           | Expression NEQ Expression
   82           | Expression LAN Expression
   83           | Expression LOR Expression
   84           | Expression BAN Expression
   85           | BNT Expression
   86           | Expression BOR Expression
   87           | Expression BXO Expression
   88           | Expression SHR Expression
   89           | NOT Expression
   90           | INT_LIT
   91           | STR_LIT
   92           | '(' Expression ')'
   93           | BOOL_LIT
   94           | '(' VARIABLE_T ')' Expression
   95           | FLOAT_LIT
   96           | IDENT

   97 $@21: ε

   98 Expression: IDENT '[' INT_LIT $@21 ']'
   99           | ε

  100 $@22: ε

  101 Assign: ADD_ASSIGN $@22 Expression

  102 $@23: ε

  103 Assign: EQL_ASSIGN $@23 Expression

  104 $@24: ε

  105 Assign: SUB_ASSIGN $@24 Expression

  106 $@25: ε

  107 Assign: MUL_ASSIGN $@25 Expression

  108 $@26: ε

  109 Assign: REM_ASSIGN $@26 Expression

  110 $@27: ε

  111 Assign: SHR_ASSIGN $@27 Expression

  112 $@28: ε

  113 Assign: SHL_ASSIGN $@28 Expression

  114 $@29: ε

  115 Assign: BAN_ASSIGN $@29 Expression

  116 $@30: ε

  117 Assign: BOR_ASSIGN $@30 Expression

  118 $@31: ε

  119 Assign: BXO_ASSIGN $@31 Expression

  120 $@32: ε

  121 Assign: INC_ASSIGN $@32 Expression

  122 $@33: ε

  123 Assign: DEC_ASSIGN $@33 Expression

  124 $@34: ε

  125 Assign: DIV_ASSIGN $@34 Expression

  126 Assign2: EQL_ASSIGN Expression
  127        | EQL_ASSIGN IDENT '(' Func ')'
  128        | EQL_ASSIGN '{' Arr '}'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 22 41 45 48 55 56 92 94 127
    ')' (41) 22 41 45 48 55 56 92 94 127
    ',' (44) 13 15 25 57 59
    ':' (58) 56
    ';' (59) 9 11 32 34 35 39 45 55
    '[' (91) 18 28 63 98
    ']' (93) 18 28 63 98
    '{' (123) 22 41 43 48 50 128
    '}' (125) 22 41 43 48 50 128
    error (256)
    COUT (258) 34
    ENDL (259) 70
    VAR_FLAG_DEFAULT (260)
    SHR (261) 88
    SHL (262) 66 68
    BAN (263) 84
    BOR (264) 86
    BNT (265) 85
    BXO (266) 87
    ADD (267) 71
    SUB (268) 72 76
    MUL (269) 73
    DIV (270) 74
    REM (271) 75
    NOT (272) 89
    GTR (273) 77
    LES (274) 78
    GEQ (275) 79
    LEQ (276)
    EQL (277) 80
    NEQ (278) 81
    LAN (279) 82
    LOR (280) 83
    VAL_ASSIGN (281)
    ADD_ASSIGN (282) 101
    SUB_ASSIGN (283) 105
    MUL_ASSIGN (284) 107
    DIV_ASSIGN (285) 125
    REM_ASSIGN (286) 109
    BAN_ASSIGN (287) 115
    BOR_ASSIGN (288) 117
    BXO_ASSIGN (289) 119
    SHR_ASSIGN (290) 111
    SHL_ASSIGN (291) 113
    INC_ASSIGN (292) 121
    DEC_ASSIGN (293) 123
    EQL_ASSIGN (294) 103 126 127 128
    IF (295) 36
    ELSE (296) 43
    FOR (297) 38
    WHILE (298) 37
    RETURN (299) 35 45
    BREAK (300) 39
    CONTINUE (301)
    VARIABLE_T <var_type> (302) 9 22 28 29 51 94
    BOOL_LIT <b_var> (303) 93
    CHAR_LIT <c_var> (304)
    INT_LIT <i_var> (305) 18 63 90 98
    FLOAT_LIT <f_var> (306) 95
    STR_LIT <s_var> (307) 91
    IDENT <s_var> (308) 13 14 15 16 18 22 28 29 56 96 98 127
    UMINUS (309)
    THEN (310)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    Program (66)
        on left: 2 3
        on right: 0
    $@1 (67)
        on left: 1
        on right: 2
    GlobalStmtList (68)
        on left: 4 5
        on right: 2 4
    GlobalStmt (69)
        on left: 6 7
        on right: 4 5
    DefineVariableStmt (70)
        on left: 9 11 12
        on right: 6 11 33
    $@2 (71)
        on left: 8
        on right: 9
    $@3 (72)
        on left: 10
        on right: 11
    IDENTS <s_var> (73)
        on left: 13 14 15 16 18
        on right: 9 13 15 51
    $@4 (74)
        on left: 17
        on right: 18
    FunctionDefStmt (75)
        on left: 22
        on right: 7
    $@5 (76)
        on left: 19
        on right: 22
    $@6 (77)
        on left: 20
        on right: 22
    $@7 (78)
        on left: 21
        on right: 22
    FunctionParameterStmtListFirst (79)
        on left: 24
        on right: 22
    $@8 (80)
        on left: 23
        on right: 24
    FunctionParameterStmtList (81)
        on left: 25 26 27
        on right: 24 25
    FunctionParameterStmt (82)
        on left: 28 29
        on right: 25 26
    StmtList (83)
        on left: 30 31
        on right: 22 30 41 43 48 50
    Stmt (84)
        on left: 32 33 34 35 36 37 38 39
        on right: 30 31
    IfStmt (85)
        on left: 41 43 45
        on right: 36 43
    $@11 (86)
        on left: 40
        on right: 41
    $@12 (87)
        on left: 42
        on right: 43
    $@13 (88)
        on left: 44
        on right: 45
    WhileStmt (89)
        on left: 48
        on right: 37
    $@14 (90)
        on left: 46
        on right: 48
    $@15 (91)
        on left: 47
        on right: 48
    ForStmt (92)
        on left: 50
        on right: 38
    $@16 (93)
        on left: 49
        on right: 50
    ForSecond (94)
        on left: 51 53 54
        on right: 55 56
    $@17 (95)
        on left: 52
        on right: 53
    ForThrid <s_var> (96)
        on left: 55 56
        on right: 50
    Func (97)
        on left: 57 58
        on right: 57 127
    Arr (98)
        on left: 59 60 61
        on right: 59 128
    InArr <i_var> (99)
        on left: 63 64
        on right: 18 63
    $@18 (100)
        on left: 62
        on right: 63
    CoutParmListStmt (101)
        on left: 66 68 69
        on right: 34 66
    $@19 (102)
        on left: 65
        on right: 66
    $@20 (103)
        on left: 67
        on right: 68
    Expression <obj_val> (104)
        on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 98 99
        on right: 11 35 41 45 48 53 55 57 58 59 60 66 68 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 92 94 101 103 105 107 109 111 113 115 117 119 121 123 125 126
    $@21 (105)
        on left: 97
        on right: 98
    Assign (106)
        on left: 101 103 105 107 109 111 113 115 117 119 121 123 125
        on right: 11 53
    $@22 (107)
        on left: 100
        on right: 101
    $@23 (108)
        on left: 102
        on right: 103
    $@24 (109)
        on left: 104
        on right: 105
    $@25 (110)
        on left: 106
        on right: 107
    $@26 (111)
        on left: 108
        on right: 109
    $@27 (112)
        on left: 110
        on right: 111
    $@28 (113)
        on left: 112
        on right: 113
    $@29 (114)
        on left: 114
        on right: 115
    $@30 (115)
        on left: 116
        on right: 117
    $@31 (116)
        on left: 118
        on right: 119
    $@32 (117)
        on left: 120
        on right: 121
    $@33 (118)
        on left: 122
        on right: 123
    $@34 (119)
        on left: 124
        on right: 125
    Assign2 (120)
        on left: 126 127 128
        on right: 15 16 64


State 0

    0 $accept: • Program $end

    $end      reduce using rule 1 ($@1)
    $end      [reduce using rule 3 (Program)]
    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program • $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 • GlobalStmtList

    VARIABLE_T  shift, and go to state 4

    VARIABLE_T  [reduce using rule 12 (DefineVariableStmt)]
    $default    reduce using rule 12 (DefineVariableStmt)

    GlobalStmtList      go to state 5
    GlobalStmt          go to state 6
    DefineVariableStmt  go to state 7
    FunctionDefStmt     go to state 8


State 3

    0 $accept: Program $end •

    $default  accept


State 4

    9 DefineVariableStmt: VARIABLE_T • $@2 IDENTS ';'
   22 FunctionDefStmt: VARIABLE_T • IDENT $@5 '(' FunctionParameterStmtListFirst ')' $@6 '{' $@7 StmtList '}'

    IDENT  shift, and go to state 9

    IDENT  [reduce using rule 8 ($@2)]

    $@2  go to state 10


State 5

    2 Program: $@1 GlobalStmtList •
    4 GlobalStmtList: GlobalStmtList • GlobalStmt

    VARIABLE_T  shift, and go to state 4

    $end        reduce using rule 2 (Program)
    $end        [reduce using rule 12 (DefineVariableStmt)]
    VARIABLE_T  [reduce using rule 12 (DefineVariableStmt)]
    $default    reduce using rule 12 (DefineVariableStmt)

    GlobalStmt          go to state 11
    DefineVariableStmt  go to state 7
    FunctionDefStmt     go to state 8


State 6

    5 GlobalStmtList: GlobalStmt •

    $default  reduce using rule 5 (GlobalStmtList)


State 7

    6 GlobalStmt: DefineVariableStmt •
   11 DefineVariableStmt: DefineVariableStmt • $@3 Expression Assign ';'

    ENDL        reduce using rule 6 (GlobalStmt)
    ENDL        [reduce using rule 10 ($@3)]
    SHR         reduce using rule 6 (GlobalStmt)
    SHR         [reduce using rule 10 ($@3)]
    BAN         reduce using rule 6 (GlobalStmt)
    BAN         [reduce using rule 10 ($@3)]
    BOR         reduce using rule 6 (GlobalStmt)
    BOR         [reduce using rule 10 ($@3)]
    BNT         reduce using rule 6 (GlobalStmt)
    BNT         [reduce using rule 10 ($@3)]
    BXO         reduce using rule 6 (GlobalStmt)
    BXO         [reduce using rule 10 ($@3)]
    ADD         reduce using rule 6 (GlobalStmt)
    ADD         [reduce using rule 10 ($@3)]
    SUB         reduce using rule 6 (GlobalStmt)
    SUB         [reduce using rule 10 ($@3)]
    MUL         reduce using rule 6 (GlobalStmt)
    MUL         [reduce using rule 10 ($@3)]
    DIV         reduce using rule 6 (GlobalStmt)
    DIV         [reduce using rule 10 ($@3)]
    REM         reduce using rule 6 (GlobalStmt)
    REM         [reduce using rule 10 ($@3)]
    NOT         reduce using rule 6 (GlobalStmt)
    NOT         [reduce using rule 10 ($@3)]
    GTR         reduce using rule 6 (GlobalStmt)
    GTR         [reduce using rule 10 ($@3)]
    LES         reduce using rule 6 (GlobalStmt)
    LES         [reduce using rule 10 ($@3)]
    GEQ         reduce using rule 6 (GlobalStmt)
    GEQ         [reduce using rule 10 ($@3)]
    EQL         reduce using rule 6 (GlobalStmt)
    EQL         [reduce using rule 10 ($@3)]
    NEQ         reduce using rule 6 (GlobalStmt)
    NEQ         [reduce using rule 10 ($@3)]
    LAN         reduce using rule 6 (GlobalStmt)
    LAN         [reduce using rule 10 ($@3)]
    LOR         reduce using rule 6 (GlobalStmt)
    LOR         [reduce using rule 10 ($@3)]
    ADD_ASSIGN  reduce using rule 6 (GlobalStmt)
    ADD_ASSIGN  [reduce using rule 10 ($@3)]
    SUB_ASSIGN  reduce using rule 6 (GlobalStmt)
    SUB_ASSIGN  [reduce using rule 10 ($@3)]
    MUL_ASSIGN  reduce using rule 6 (GlobalStmt)
    MUL_ASSIGN  [reduce using rule 10 ($@3)]
    DIV_ASSIGN  reduce using rule 6 (GlobalStmt)
    DIV_ASSIGN  [reduce using rule 10 ($@3)]
    REM_ASSIGN  reduce using rule 6 (GlobalStmt)
    REM_ASSIGN  [reduce using rule 10 ($@3)]
    BAN_ASSIGN  reduce using rule 6 (GlobalStmt)
    BAN_ASSIGN  [reduce using rule 10 ($@3)]
    BOR_ASSIGN  reduce using rule 6 (GlobalStmt)
    BOR_ASSIGN  [reduce using rule 10 ($@3)]
    BXO_ASSIGN  reduce using rule 6 (GlobalStmt)
    BXO_ASSIGN  [reduce using rule 10 ($@3)]
    SHR_ASSIGN  reduce using rule 6 (GlobalStmt)
    SHR_ASSIGN  [reduce using rule 10 ($@3)]
    SHL_ASSIGN  reduce using rule 6 (GlobalStmt)
    SHL_ASSIGN  [reduce using rule 10 ($@3)]
    INC_ASSIGN  reduce using rule 6 (GlobalStmt)
    INC_ASSIGN  [reduce using rule 10 ($@3)]
    DEC_ASSIGN  reduce using rule 6 (GlobalStmt)
    DEC_ASSIGN  [reduce using rule 10 ($@3)]
    EQL_ASSIGN  reduce using rule 6 (GlobalStmt)
    EQL_ASSIGN  [reduce using rule 10 ($@3)]
    '('         reduce using rule 6 (GlobalStmt)
    '('         [reduce using rule 10 ($@3)]
    BOOL_LIT    reduce using rule 6 (GlobalStmt)
    BOOL_LIT    [reduce using rule 10 ($@3)]
    INT_LIT     reduce using rule 6 (GlobalStmt)
    INT_LIT     [reduce using rule 10 ($@3)]
    FLOAT_LIT   reduce using rule 6 (GlobalStmt)
    FLOAT_LIT   [reduce using rule 10 ($@3)]
    STR_LIT     reduce using rule 6 (GlobalStmt)
    STR_LIT     [reduce using rule 10 ($@3)]
    IDENT       reduce using rule 6 (GlobalStmt)
    IDENT       [reduce using rule 10 ($@3)]
    $default    reduce using rule 6 (GlobalStmt)

    $@3  go to state 12


State 8

    7 GlobalStmt: FunctionDefStmt •

    $default  reduce using rule 7 (GlobalStmt)


State 9

   22 FunctionDefStmt: VARIABLE_T IDENT • $@5 '(' FunctionParameterStmtListFirst ')' $@6 '{' $@7 StmtList '}'

    $default  reduce using rule 19 ($@5)

    $@5  go to state 13


State 10

    9 DefineVariableStmt: VARIABLE_T $@2 • IDENTS ';'

    IDENT  shift, and go to state 14

    IDENTS  go to state 15


State 11

    4 GlobalStmtList: GlobalStmtList GlobalStmt •

    $default  reduce using rule 4 (GlobalStmtList)


State 12

   11 DefineVariableStmt: DefineVariableStmt $@3 • Expression Assign ';'

    BNT        shift, and go to state 16
    SUB        shift, and go to state 17
    NOT        shift, and go to state 18
    '('        shift, and go to state 19
    BOOL_LIT   shift, and go to state 20
    INT_LIT    shift, and go to state 21
    FLOAT_LIT  shift, and go to state 22
    STR_LIT    shift, and go to state 23
    IDENT      shift, and go to state 24

    SUB       [reduce using rule 99 (Expression)]
    $default  reduce using rule 99 (Expression)

    Expression  go to state 25


State 13

   22 FunctionDefStmt: VARIABLE_T IDENT $@5 • '(' FunctionParameterStmtListFirst ')' $@6 '{' $@7 StmtList '}'

    '('  shift, and go to state 26


State 14

   14 IDENTS: IDENT •
   16       | IDENT • Assign2
   18       | IDENT • '[' INT_LIT $@4 ']' InArr

    EQL_ASSIGN  shift, and go to state 27
    '['         shift, and go to state 28

    $default  reduce using rule 14 (IDENTS)

    Assign2  go to state 29


State 15

    9 DefineVariableStmt: VARIABLE_T $@2 IDENTS • ';'
   13 IDENTS: IDENTS • ',' IDENT
   15       | IDENTS • ',' IDENT Assign2

    ';'  shift, and go to state 30
    ','  shift, and go to state 31


State 16

   85 Expression: BNT • Expression

    BNT        shift, and go to state 16
    SUB        shift, and go to state 17
    NOT        shift, and go to state 18
    '('        shift, and go to state 19
    BOOL_LIT   shift, and go to state 20
    INT_LIT    shift, and go to state 21
    FLOAT_LIT  shift, and go to state 22
    STR_LIT    shift, and go to state 23
    IDENT      shift, and go to state 24

    SUB       [reduce using rule 99 (Expression)]
    $default  reduce using rule 99 (Expression)

    Expression  go to state 32


State 17

   76 Expression: SUB • Expression

    BNT        shift, and go to state 16
    SUB        shift, and go to state 17
    NOT        shift, and go to state 18
    '('        shift, and go to state 19
    BOOL_LIT   shift, and go to state 20
    INT_LIT    shift, and go to state 21
    FLOAT_LIT  shift, and go to state 22
    STR_LIT    shift, and go to state 23
    IDENT      shift, and go to state 24

    SUB       [reduce using rule 99 (Expression)]
    $default  reduce using rule 99 (Expression)

    Expression  go to state 33


State 18

   89 Expression: NOT • Expression

    BNT        shift, and go to state 16
    SUB        shift, and go to state 17
    NOT        shift, and go to state 18
    '('        shift, and go to state 19
    BOOL_LIT   shift, and go to state 20
    INT_LIT    shift, and go to state 21
    FLOAT_LIT  shift, and go to state 22
    STR_LIT    shift, and go to state 23
    IDENT      shift, and go to state 24

    SUB       [reduce using rule 99 (Expression)]
    $default  reduce using rule 99 (Expression)

    Expression  go to state 34


State 19

   92 Expression: '(' • Expression ')'
   94           | '(' • VARIABLE_T ')' Expression

    BNT         shift, and go to state 16
    SUB         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19
    VARIABLE_T  shift, and go to state 35
    BOOL_LIT    shift, and go to state 20
    INT_LIT     shift, and go to state 21
    FLOAT_LIT   shift, and go to state 22
    STR_LIT     shift, and go to state 23
    IDENT       shift, and go to state 24

    SUB       [reduce using rule 99 (Expression)]
    $default  reduce using rule 99 (Expression)

    Expression  go to state 36


State 20

   93 Expression: BOOL_LIT •

    $default  reduce using rule 93 (Expression)


State 21

   90 Expression: INT_LIT •

    $default  reduce using rule 90 (Expression)


State 22

   95 Expression: FLOAT_LIT •

    $default  reduce using rule 95 (Expression)


State 23

   91 Expression: STR_LIT •

    $default  reduce using rule 91 (Expression)


State 24

   96 Expression: IDENT •
   98           | IDENT • '[' INT_LIT $@21 ']'

    '['  shift, and go to state 37

    '['       [reduce using rule 96 (Expression)]
    $default  reduce using rule 96 (Expression)


State 25

   11 DefineVariableStmt: DefineVariableStmt $@3 Expression • Assign ';'
   70 Expression: Expression • ENDL Expression
   71           | Expression • ADD Expression
   72           | Expression • SUB Expression
   73           | Expression • MUL Expression
   74           | Expression • DIV Expression
   75           | Expression • REM Expression
   77           | Expression • GTR Expression
   78           | Expression • LES Expression
   79           | Expression • GEQ Expression
   80           | Expression • EQL Expression
   81           | Expression • NEQ Expression
   82           | Expression • LAN Expression
   83           | Expression • LOR Expression
   84           | Expression • BAN Expression
   86           | Expression • BOR Expression
   87           | Expression • BXO Expression
   88           | Expression • SHR Expression

    ENDL        shift, and go to state 38
    SHR         shift, and go to state 39
    BAN         shift, and go to state 40
    BOR         shift, and go to state 41
    BXO         shift, and go to state 42
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    MUL         shift, and go to state 45
    DIV         shift, and go to state 46
    REM         shift, and go to state 47
    GTR         shift, and go to state 48
    LES         shift, and go to state 49
    GEQ         shift, and go to state 50
    EQL         shift, and go to state 51
    NEQ         shift, and go to state 52
    LAN         shift, and go to state 53
    LOR         shift, and go to state 54
    ADD_ASSIGN  shift, and go to state 55
    SUB_ASSIGN  shift, and go to state 56
    MUL_ASSIGN  shift, and go to state 57
    DIV_ASSIGN  shift, and go to state 58
    REM_ASSIGN  shift, and go to state 59
    BAN_ASSIGN  shift, and go to state 60
    BOR_ASSIGN  shift, and go to state 61
    BXO_ASSIGN  shift, and go to state 62
    SHR_ASSIGN  shift, and go to state 63
    SHL_ASSIGN  shift, and go to state 64
    INC_ASSIGN  shift, and go to state 65
    DEC_ASSIGN  shift, and go to state 66
    EQL_ASSIGN  shift, and go to state 67

    Assign  go to state 68


State 26

   22 FunctionDefStmt: VARIABLE_T IDENT $@5 '(' • FunctionParameterStmtListFirst ')' $@6 '{' $@7 StmtList '}'

    $default  reduce using rule 23 ($@8)

    FunctionParameterStmtListFirst  go to state 69
    $@8                             go to state 70


State 27

  126 Assign2: EQL_ASSIGN • Expression
  127        | EQL_ASSIGN • IDENT '(' Func ')'
  128        | EQL_ASSIGN • '{' Arr '}'

    BNT        shift, and go to state 16
    SUB        shift, and go to state 17
    NOT        shift, and go to state 18
    '('        shift, and go to state 19
    BOOL_LIT   shift, and go to state 20
    INT_LIT    shift, and go to state 21
    FLOAT_LIT  shift, and go to state 22
    STR_LIT    shift, and go to state 23
    IDENT      shift, and go to state 71
    '{'        shift, and go to state 72

    SUB       [reduce using rule 99 (Expression)]
    $default  reduce using rule 99 (Expression)

    Expression  go to state 73


State 28

   18 IDENTS: IDENT '[' • INT_LIT $@4 ']' InArr

    INT_LIT  shift, and go to state 74


State 29

   16 IDENTS: IDENT Assign2 •

    $default  reduce using rule 16 (IDENTS)


State 30

    9 DefineVariableStmt: VARIABLE_T $@2 IDENTS ';' •

    $default  reduce using rule 9 (DefineVariableStmt)


State 31

   13 IDENTS: IDENTS ',' • IDENT
   15       | IDENTS ',' • IDENT Assign2

    IDENT  shift, and go to state 75


State 32

   70 Expression: Expression • ENDL Expression
   71           | Expression • ADD Expression
   72           | Expression • SUB Expression
   73           | Expression • MUL Expression
   74           | Expression • DIV Expression
   75           | Expression • REM Expression
   77           | Expression • GTR Expression
   78           | Expression • LES Expression
   79           | Expression • GEQ Expression
   80           | Expression • EQL Expression
   81           | Expression • NEQ Expression
   82           | Expression • LAN Expression
   83           | Expression • LOR Expression
   84           | Expression • BAN Expression
   85           | BNT Expression •
   86           | Expression • BOR Expression
   87           | Expression • BXO Expression
   88           | Expression • SHR Expression

    ENDL  shift, and go to state 38
    SHR   shift, and go to state 39
    BOR   shift, and go to state 41
    BXO   shift, and go to state 42

    ENDL      [reduce using rule 85 (Expression)]
    SHR       [reduce using rule 85 (Expression)]
    BOR       [reduce using rule 85 (Expression)]
    BXO       [reduce using rule 85 (Expression)]
    $default  reduce using rule 85 (Expression)


State 33

   70 Expression: Expression • ENDL Expression
   71           | Expression • ADD Expression
   72           | Expression • SUB Expression
   73           | Expression • MUL Expression
   74           | Expression • DIV Expression
   75           | Expression • REM Expression
   76           | SUB Expression •
   77           | Expression • GTR Expression
   78           | Expression • LES Expression
   79           | Expression • GEQ Expression
   80           | Expression • EQL Expression
   81           | Expression • NEQ Expression
   82           | Expression • LAN Expression
   83           | Expression • LOR Expression
   84           | Expression • BAN Expression
   86           | Expression • BOR Expression
   87           | Expression • BXO Expression
   88           | Expression • SHR Expression

    ENDL  shift, and go to state 38
    SHR   shift, and go to state 39
    BOR   shift, and go to state 41
    BXO   shift, and go to state 42

    ENDL      [reduce using rule 76 (Expression)]
    SHR       [reduce using rule 76 (Expression)]
    BOR       [reduce using rule 76 (Expression)]
    BXO       [reduce using rule 76 (Expression)]
    $default  reduce using rule 76 (Expression)


State 34

   70 Expression: Expression • ENDL Expression
   71           | Expression • ADD Expression
   72           | Expression • SUB Expression
   73           | Expression • MUL Expression
   74           | Expression • DIV Expression
   75           | Expression • REM Expression
   77           | Expression • GTR Expression
   78           | Expression • LES Expression
   79           | Expression • GEQ Expression
   80           | Expression • EQL Expression
   81           | Expression • NEQ Expression
   82           | Expression • LAN Expression
   83           | Expression • LOR Expression
   84           | Expression • BAN Expression
   86           | Expression • BOR Expression
   87           | Expression • BXO Expression
   88           | Expression • SHR Expression
   89           | NOT Expression •

    ENDL  shift, and go to state 38
    SHR   shift, and go to state 39
    BOR   shift, and go to state 41
    BXO   shift, and go to state 42

    ENDL      [reduce using rule 89 (Expression)]
    SHR       [reduce using rule 89 (Expression)]
    BOR       [reduce using rule 89 (Expression)]
    BXO       [reduce using rule 89 (Expression)]
    $default  reduce using rule 89 (Expression)


State 35

   94 Expression: '(' VARIABLE_T • ')' Expression

    ')'  shift, and go to state 76


State 36
